Added another debug module

--- a/1install.yaml
+++ b/1install.yaml
@@ -19,3 +19,7 @@
 
   - name: using the debug module
     debug: msg="This is a DNS playbook"
+
+
+  - name: Adding another debug statement
+    debug: msg="We are learning GIT"
