Added 3rd debug module to the playbook

--- a/1install.yaml
+++ b/1install.yaml
@@ -23,3 +23,6 @@
 
   - name: Adding another debug statement
     debug: msg="We are learning GIT"
+
+  - name: adding 3rd debug module
+    debug: msg="we are learning git branches concept"
